--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "react-aws-s3": "^1.5.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-s3": "^1.3.1",
     "react-scripts": "4.0.2",
+    "styled-components": "^5.2.3",
+    "sweetalert2": "^10.16.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
